rensat bland divar

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div>
+       
             <br />
             <br />
             <br />
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
+                        <div class="col-md-3 col-lg-3" style="padding-left:0px;">
 
                             <label style="color:transparent">.</label>
                             <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
@@ -112,7 +112,7 @@
                     </div>
                     
                 </div>
-                <div class=" col-md-5">
+                <div class="col-md-5">
                     <p>
                         <br />
                         Här kan du välja vilken avdelning den nyanställda ska synas på. Du kan även välja vilken rad samt kolumn du vill att den ska synas på hemsidan. 
@@ -198,12 +198,12 @@
                                         </button>
                                     </div>
                                 </div>
-                            
-                            <div class=" row" style="background-color:#fbfbfb;">
+                            </div>
+                            <div class="row" style="background-color:#fbfbfb;">
 
                                 <div class="redigera" id="redigera" style="display:none; ">
                                     <br />
-                                    <div class=" col-md-12 col-lg-12">
+                                    <div class="col-md-12 col-lg-12">
                                         <div class="falt">
                                             <label>
                                                 För- och Efternamn:
@@ -241,7 +241,7 @@
 
                                                 <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
                                             </div>
-                                            <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
+                                            <div class="col-md-3 col-lg-3" style="padding-left:0px;">
                                                 <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
                                             </div>
                                         </div>
@@ -263,7 +263,7 @@
                             </div>
                             
                         </div>
-                    </div>
+                    
                     <div class="col-sm-3 col-xs-7">
                         <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt="Anna Ekström"></center>
                         <h4>Anna Ekström</h4>
@@ -274,8 +274,6 @@
                             <a href="mailto:anna@je-bygg.se" target="_blank">anna@je-bygg.se</a>
                         </p>
                         <div class="row">
-
-
                             <div class="col-lg-2">
                                 <div class="btnredigera btn-group-xs" style="text-align:left;">
                                     <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
@@ -283,8 +281,6 @@
                                         <span class="caret"></span>
                                     </button>
                                 </div>
-
-
                             </div>
                             <div class="col-lg-1">
 
@@ -297,43 +293,40 @@
                                     </button>
                                 </div>
                             </div>
-
+                            </div>
                             <div class="row" style="background-color:#fbfbfb;">
 
                                 <div class="redigera" id="redigera" style="display:none; ">
                                     <br />
-                                    <div class="col-sm-3">
-                                     <p>vart hamnar denna text?</p>
-                                    </div>
-                                    
-                                    <div class="col-sm-3">
+                                                                       
+                                   
                                         <div class="col-md-12 col-lg-12">
                                             <div class="falt">
                                                 <label>
                                                     För- och Efternamn:
                                                 </label>
                                                 <div class="input-group">
-                                                    <input name="state" placeholder="Stieg Ekström" class="form-control" type="text">
+                                                    <input name="state" placeholder="Anna Ekström" class="form-control" type="text">
                                                 </div>
                                             </div>
 
                                             <div class="falt">
                                                 <label>Roll:</label>
                                                 <div class="input-group">
-                                                    <input name="state" required placeholder="VD" class="form-control" type="text">
+                                                    <input name="state" required placeholder="Hyresinbetalningar" class="form-control" type="text">
                                                 </div>
                                             </div>
 
                                             <div class="falt">
                                                 <label>Telefon:</label>
                                                 <div class="input-group">
-                                                    <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
+                                                    <input name="deltagareinput" placeholder="019 - 16 43 72" class="form-control input-md" type="text">
                                                 </div>
                                             </div>
                                             <div class="falt">
                                                 <label>E-post:</label>
                                                 <div class="input-group">
-                                                    <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
+                                                    <input name="deltagareinput" placeholder="anna@je-bygg.se" class="form-control input-md" type="text">
                                                 </div>
                                             </div>
                                         </div>
@@ -353,9 +346,7 @@
 
                                         </div>
 
-
-
-                                        <div>
+                                    
                                             <br />
 
                                             <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
@@ -371,10 +362,8 @@
                                 </div>
 
 
-                            </div>
-
-                        </div>
-                    </div>
+                            
+                    
                     <div class="col-sm-3 col-xs-7">
                         <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt="Mari Ekström Thor"></center>
                         <h4>Mari Ekström Thor</h4>
@@ -433,6 +422,8 @@
 
 
                             </div>
+
+
                             <div class="col-lg-4">
 
                                 <div class="btnredigera btn-group-xs" style="text-align:right;">
@@ -443,7 +434,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    </div>
+        </div>
+        
+                
                 <br />
                 <br />
 
@@ -486,7 +480,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+        
 
         <br />
         <br />
@@ -554,10 +548,11 @@
                 <h4>Britt-Marie Jansson</h4>
             </div>
 
-
+            </div>
         </div>
-    </div>
 </div>
+
+
     
     
 
