--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -197,7 +197,7 @@
                             
                                 <div class="col-lg-2">
                                     <div class="btnredigera btn-group-xs" style="text-align:left;">
-                                        <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
+                                        <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera2()">
                                             Redigera
                                             <span class="caret"></span>
                                         </button>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="row" style="background-color:#fbfbfb;">
 
-                                <div class="redigera" id="redigera" style="display:none; ">
+                                <div class="redigera" id="redigera2" style="display:none; ">
                                     <br />
                                     <div class="col-md-12 col-lg-12">
                                         <div class="falt">
@@ -263,18 +263,18 @@
                                                 <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
                                             </div>
                                         </div>
-                                                                              
-                                        
+
+
                                     </div>
-                                   
-                                        
 
-                                        <div>
-                                            <br />
 
-                                            <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                                        </div>
-                             
+
+                                    <div>
+                                        <br />
+
+                                        <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                    </div>
+
                                 </div>
 
 
