--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -15,7 +15,7 @@
     bilder.Add("bild 3");
 
 }
-<center><h2 class="sidrubrik">Lediga objekt</h2></center>
+<center><h2 class="sidrubrik">Objekt</h2></center>
 
 <div class="maincontainer1">
     <div class="maincontainer ontop">
@@ -268,4 +268,4 @@
     
    
     </div>
-        
+     </div>   
