--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -14,6 +14,15 @@
     bilder.Add("bild 2");
     bilder.Add("bild 3");
 
+    List<String> stad = new List<string>();
+    stad.Add("Örebro");
+    stad.Add("Nora");
+    stad.Add("Kumla");
+
+    List<String> omrade = new List<string>();
+    omrade.Add("Örebro, Norr");
+    omrade.Add("Örebro, Centralt");
+    omrade.Add("Örebro, Studentboende");
 }
 <center><h2 class="sidrubrik">Objekt</h2></center>
 
@@ -257,6 +266,11 @@
                     <button type="submit" class="btn btn-danger btn-lg">Ta bort objekt <span class="glyphicon glyphicon-trash"></span></button>
 
                 </div>
+                <div class=" col-md-3 col-lg-3" style="margin-top:25px; padding-left:0px; padding-bottom:10px;">
+
+                    <button type="submit" class="btn btn-default btn-sm">Rensa fält</button>
+
+                </div>
             </div>
              
                
@@ -265,7 +279,202 @@
         <hr style="border-top: 1px solid #e5e5e5;"/>
         <br />
         <br />
-    
+        <legend style="color:#e93523;">Administrera stad</legend>
+        <div class=" row" style=" background-color: #dcdcdc; ">
+
+            <div class=" col-md-5" style="background-color: #dcdcdc; padding-bottom: 10px;">
+                <h1>Ny stad</h1>
+
+                <div class="">
+                    <label>Stad:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+                <div class="falt">
+                    <label>Beskrivning:</label>
+                    <div class="input-group">
+                        <textarea class="form-control" name="comment" placeholder="Beskriv staden" style="height:100px; width:205px;"></textarea>
+                    </div>
+                </div>
+
+                <div class="">
+
+                    <button type="submit" class="btn btn-success btn-sm" style="margin-top:5px;">Spara ny stad <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                </div>
+            </div>
+
+            <div class=" col-md-6" style="border-left:20px solid white; background-color:#dcdcdc; padding-bottom:10px;">
+                <h1>Redigera stad</h1>
+                <label>Städer</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string s in stad)
+                        {
+                            <option id="objekt" class="list-group-item" value="@s">@s</option>
+                        }
+                    </select>
+                </div>
+
+                <div class="">
+                    <label>Stad:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="Örebro" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+                <div class="falt">
+                    <label>Beskrivning:</label>
+                    <div class="input-group">
+                        <textarea class="form-control" name="comment" placeholder="Örebro" style="height:100px; width:205px;"></textarea>
+                    </div>
+                </div>
+                <div class=" row">
+                    <div class="col-md-3">
+                        <button type="submit" class="btn btn-success btn-sm">Spara redigering <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                    </div>
+                    <div class=" col-md-3">
+                        <button type="submit" class="btn btn-danger btn-sm">Ta bort stad <span class="glyphicon glyphicon-trash"></span></button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <hr style="border-top: 1px solid #e5e5e5;" />
+        <br />
+        <br />
+        <br />
+        <legend style="color:#e93523;">Administrera område</legend>
+        <div class=" row" style="background-color: #dcdcdc;">
+       
+            <div class=" col-md-4 col-lg-3" style="padding-bottom:10px;">
+                <h1 style="text-align:center;">Nytt område</h1>
+
+                <div class="">
+                    <label>Område:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+                <div class="falt">
+                    <label>Beskrivning:</label>
+                    <div class="input-group">
+                        <textarea class="form-control" name="comment" placeholder="Beskriv området" style="height:100px; width:205px;"></textarea>
+                    </div>
+                </div>
+                <label>Stad området hör till</label>
+                <br />
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                        Välj stad
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
+
+                    </ul>
+                </div>
+                <br />
+                <div class="falt">
+                    <br />
+                    <button type="submit" class="btn btn-success btn-sm" style="margin-top:5px;">Spara nytt område <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                </div>
+
+
+            </div>
+
+            <div class=" col-md-6 col-lg-6" style=" border-right: 20px solid white; border-left:20px solid white; padding-bottom:10px;" >
+                <h1 style="text-align:center;">Redigera område</h1>
+                <label>Områden</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string o in omrade)
+                        {
+                            <option id="objekt" class="list-group-item" value="@o">@o</option>
+                        }
+                    </select>
+                </div>
+
+                <div class="">
+                    <label>Område:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+                <div class="falt">
+                    <label>Beskrivning:</label>
+                    <div class="input-group">
+                        <textarea class="form-control" name="comment" placeholder="Beskriv området" style="height:100px; width:205px;"></textarea>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                        Välj stad
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
+
+                    </ul>
+                    
+                </div>
+                <div class=" row"><br />
+                    <div class="col-md-3 col-lg-4">
+                        <button type="submit" class="btn btn-success btn-sm">Spara redigering <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                    </div>
+                    <div class=" col-md-3 col-lg-4">
+                        <button type="submit" class="btn btn-danger btn-sm">Ta bort område <span class="glyphicon glyphicon-trash"></span></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" col-md-4 col-lg-3" style="padding-bottom:10px;">
+                <h1 style="text-align:center;">Hantera</h1>
+                <label>Områden</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string o in omrade)
+                        {
+                            <option id="objekt" class="list-group-item" value="@o">@o</option>
+                        }
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-primary btn-sm">Lägg till <span class="glyphicon glyphicon-arrow-down"></span></button>
+                </div>
+                <label>Områden i intresseanmälan</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string o in omrade)
+                        {
+                            <option id="objekt" class="list-group-item" value="@o">@o</option>
+                        }
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-danger btn-sm">Ta bort <span class="glyphicon glyphicon-trash"></span></button>
+                </div>
+            </div> 
+
+
+
+
+        </div>
+
+
+        <br />
+
+
+        <hr style="border-top: 1px solid #e5e5e5;" />
+        <br />
+        <br />
    
     </div>
      </div>   
