--- a/design/design/Views/Home/LedigaObjektAdmin.cshtml
+++ b/design/design/Views/Home/LedigaObjektAdmin.cshtml
@@ -3,6 +3,7 @@
 @using System.Collections.Generic;
 @{
     ViewBag.Title = "Varafastigheter";
+    //Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 @{
     List<String> m = new List<string>();
@@ -23,6 +24,11 @@
     omrade.Add("Örebro, Norr");
     omrade.Add("Örebro, Centralt");
     omrade.Add("Örebro, Studentboende");
+
+    List<String> val = new List<string>();
+    val.Add("Hiss");
+    val.Add("Radhus");
+    val.Add("Balkong");
 }
 <center><h2 class="sidrubrik">Objekt</h2></center>
 
@@ -476,5 +482,92 @@
         <br />
         <br />
    
+        <legend style="color:#e93523;">Administrera övriga val</legend>
+        <div class=" row" style="background-color: #dcdcdc;">
+
+            <div class=" col-md-4 col-lg-3" style="background-color: #dcdcdc; padding-bottom:10px;">
+                <h1 style="text-align:center;">Nytt övrigt val</h1>
+
+                <div class="">
+                    <label>Namn:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+
+                <div class="falt">
+                    <br />
+                    <button type="submit" class="btn btn-success btn-sm" style="margin-top:5px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                </div>
+
+
+            </div>
+
+            <div class=" col-md-6 col-lg-6" style="background-color: #dcdcdc; border-right: 20px solid white; border-left:20px solid white; padding-bottom:100px;">
+                <h1 style="text-align:center;">Redigera övriga val</h1>
+                <label>Övriga val</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string v in val)
+                        {
+                            <option id="objekt" class="list-group-item" value="@v">@v</option>
+                        }
+                    </select>
+                </div>
+
+                <div class="">
+                    <label>Namn:</label>
+                    <div class=" input-group">
+                        <input name="state" placeholder="" class="form-control" style="border-radius:0px;" type="text">
+                    </div>
+                </div>
+
+                <div class=" row">
+                    <br />
+                    <div class="col-md-3 col-lg-4">
+                        <button type="submit" class="btn btn-success btn-sm">Spara redigering <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                    </div>
+                    <div class=" col-md-3 col-lg-4">
+                        <button type="submit" class="btn btn-danger btn-sm">Ta bort <span class="glyphicon glyphicon-trash"></span></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" col-md-4 col-lg-3" style="background-color: #dcdcdc; padding-bottom:10px;">
+                <h1 style="text-align:center;">Hantera</h1>
+                <label>Övriga val</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string v in val)
+                        {
+                            <option id="objekt" class="list-group-item" value="@v">@v</option>
+                        }
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-primary btn-sm">Lägg till <span class="glyphicon glyphicon-arrow-down"></span></button>
+                </div>
+                <label>Övriga önskemål i intresseanmälan</label>
+                <div>
+
+                    <select class="list-group" id="objekt" name="objekt" multiple="multiple" style="width:205px; height: 100px; margin-bottom:5px;">
+                        @foreach (string v in val)
+                        {
+                            <option id="objekt" class="list-group-item" value="@v">@v</option>
+                        }
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-danger btn-sm">Ta bort <span class="glyphicon glyphicon-trash"></span></button>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
     </div>
      </div>   
