Fortsatt med nyhet admin

--- a/design/design/Views/Home/NyheterAdmin.cshtml
+++ b/design/design/Views/Home/NyheterAdmin.cshtml
@@ -87,25 +87,40 @@
                             </div>
                         </div>
                     </div>
+                  
                     <div class="nyhet1" id="nyhet2" style="display:none;">
-                        <h3>Glad påsk! REDIGERA</h3>
-                        <p style="text-align:left;">
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-
+                        <div class="falt">
+                        
+                            <div class="input-group">
                             <br />
-                            <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                            Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                        </p>
-                        <p style="text-align:right;">Datum: 2017-04-12</p>
+                                <input name="state" placeholder="Glad påsk!" class="form-control" type="text" style="margin-left:200px;">
+                            </div>
+                        </div>
+                        <img src="~/Content/Images/redigeranyhet.jpg" style="width: 600px; border: 1px solid grey;" />
+                       
                         <br />
-                        <div class="falt" style="margin-top:10px;">
-                            <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
+                        <div class=" row">
+                            <div class="col-lg-4" >
+                        
+                        <div class="input-group">
+                          
+                            <input name="state" placeholder="" class="form-control" type="date" style="margin-left:52px; margin-top:10px;">
+                        </div>
+                    
+                            </div>
+                            <div class=" col-lg-4" >
+                                <label>Publicera:</label><br />
+                                <form>
+                                    <input type="radio" name="val" value="Ja"> Ja
+                                    <input type="radio" name="val" value="Nej" checked> Nej<br />
+
+                                </form>
+                            </div>
+                            <div class=" col-lg-4">
+                                <div class="falt" style="margin-top:10px;">
+                                    <button type="submit" class="btn btn-success">Spara <span class="glyphicon glyphicon-floppy-saved" style="text-align:right;"></span></button>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
