Färdigställt nyheter för admin

--- a/design/design/Views/Home/NyheterAdmin.cshtml
+++ b/design/design/Views/Home/NyheterAdmin.cshtml
@@ -48,6 +48,7 @@
         <hr style="border-top: 1px solid #e5e5e5;" />
         <br />
         <br />
+        <legend style="color:#e93523">Redigera nyheter</legend>
      <div class=" row" >
          <div class=" col-md-3 col-lg-3" ></div>
          <div class="col-md-5 col-lg-5" style="padding-left:0px;">
@@ -144,6 +145,29 @@
                 </div>
                 <br />
                 <div class="nyhet">
+                    <div class="row" style="margin-top:10px;">
+                        <div class="col-lg-6">
+
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="btnredigera btn-group" style="text-align:left;">
+                                <button class="btn btn-default" type="button" id="redigerabtn">
+                                    Redigera nyhet
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        <div class="col-lg-3">
+
+                            <div class="btnredigera btn-group" style="text-align:right;">
+                                <button class="btn btn-danger" type="button" id="redigerabtn">
+                                    Ta bort nyhet
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <h3>Spara vatten!</h3>
                     <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <p style="text-align:right;">Datum: 2017-04-10</p>
