Fixat till studentsidan för besökare

--- a/design/design/Views/Home/FelanmalanAdmin.cshtml
+++ b/design/design/Views/Home/FelanmalanAdmin.cshtml
@@ -126,8 +126,14 @@
                     </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4 col-lg-4 rightdiv"  >
-            <p class ="felanmalan-info"><br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b></pclass>
+        <div class="col-md-4 col-sm-4 col-lg-4 rightdiv">
+            <p class ="felanmalan-info">
+                <div class="btnredigera btn-group-xs">
+                    <button class="btn" type="button" id="redigerabtn">
+                        Redigera <span><i class="glyphicon glyphicon-pencil"></i></span>
+                    </button>
+                </div>
+                <br /><b>På hemsidan kan ni göra felanmälan dygnet runt.</b>
             <p class="felanmalan-info">
                 <br /><b>
                 Om ni ej fått återkoppling inom 1-2 veckor efter att
@@ -146,11 +152,7 @@
                 <br />Efter kontorstid vid akuta ärenden,
                 <br />ring vår Jourtelefon: 010-4705758.
                 <br />
-                <div class="btnredigera btn-group-xs">
-                    <button class="btn" type="button" id="redigerabtn">
-                        Redigera
-                    </button>
-                </div>
+                
                
             </p>
         </div>
