kontakt-admin, bild istället för textrutor när man redigerar en anställd

--- a/design/design/Views/Home/KontaktAdmin.cshtml
+++ b/design/design/Views/Home/KontaktAdmin.cshtml
@@ -224,32 +224,13 @@
                                     <div class="col-md-12 col-lg-12">
                                         <div class="falt">
                                             <label>
-                                                För- och Efternamn:
+                                                Text:
                                             </label>
-                                            <div class="input-group">
-                                                <input name="state" placeholder="Stieg Ekström" class="form-control" type="text">
-                                            </div>
-                                        </div>
+                                            <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
 
-                                        <div class="falt">
-                                            <label>Roll:</label>
-                                            <div class="input-group">
-                                                <input name="state" required placeholder="VD" class="form-control" type="text">
-                                            </div>
                                         </div>
-
-                                        <div class="falt">
-                                            <label>Telefon:</label>
-                                            <div class="input-group">
-                                                <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
-                                            </div>
-                                        </div>
-                                        <div class="falt">
-                                            <label>E-post:</label>
-                                            <div class="input-group">
-                                                <input name="deltagareinput" placeholder="" class="form-control input-md" type="text">
-                                            </div>
-                                        </div>
+                                                                          
+                                       
                                     </div>
                                     <div class=" col-md-6 col-lg-6" style="padding-right:0px;">
                                         <label>Bild:</label>
@@ -312,65 +293,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="row" style="background-color:#fbfbfb;">
-
-                                <div class="redigera" id="redigera" style="display:none; ">
-                                    <br />
-                                                                       
-                                   
-                                        <div class="col-md-12 col-lg-12">
-                                            <div class="falt">
-                                                <label>
-                                                    För- och Efternamn:
-                                                </label>
-                                                <div class="input-group">
-                                                    <input name="state" placeholder="Anna Ekström" class="form-control" type="text">
-                                                </div>
-                                            </div>
-
-                                            <div class="falt">
-                                                <label>Roll:</label>
-                                                <div class="input-group">
-                                                    <input name="state" required placeholder="Hyresinbetalningar" class="form-control" type="text">
-                                                </div>
-                                            </div>
-
-                                            <div class="falt">
-                                                <label>Telefon:</label>
-                                                <div class="input-group">
-                                                    <input name="deltagareinput" placeholder="019 - 16 43 72" class="form-control input-md" type="text">
-                                                </div>
-                                            </div>
-                                            <div class="falt">
-                                                <label>E-post:</label>
-                                                <div class="input-group">
-                                                    <input name="deltagareinput" placeholder="anna@je-bygg.se" class="form-control input-md" type="text">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class=" col-md-6 col-lg-6" style="padding-right:0px;">
-                                            <label>Bild:</label>
-                                            <div class="row falt">
-
-                                                <div class="col-md-9">
-
-                                                    <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
-                                                </div>
-                                                <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
-                                                    <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
-                                                </div>
-                                            </div>
-
-
-                                        </div>
-
-                                    
-                                            <br />
-
-                                            <button type="submit" class="btn btn-success" style="margin-top:75px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
-                                        </div>
-
-                                    </div>
+                           
                                     <div class="col-sm-3">
 
                                     </div>
