--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -68,22 +68,153 @@
     <legend style="color:#e93523">Våra studentboenden</legend>
     <div class="row" style="margin-left:3%; margin-right:3%;">
    
-            <div class="row objekt">
-                <div class="col-md-4 col-sm-4 col-xs-10 col-lg-3">
-                    <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt="erikrosenbergsväg"></center>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-10">
-                    <p>
-                        <b>Område:</b> Örebro Almby <br />
-                        <b>Adress:</b> Erik RosenbergsVäg 1 <br />
-                        <b>Antal lägenheter i fastigheten:</b> 20<br />
-                        <br />
-                        1 Ledig lägenhet i fastigheten<br />
-                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
-                    </p>
-                    <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/MEbdAJ2D9Wq" target="_blank"> Hitta hit</a>
+        <div class="row objekt">
+            <div class="col-md-4 col-sm-4 col-xs-10 col-lg-3">
+                <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt="erikrosenbergsväg"></center>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-10">
+                <p>
+                    <b>Område:</b> Örebro Almby <br />
+                    <b>Adress:</b> Erik RosenbergsVäg 1 <br />
+                    <b>Antal lägenheter i fastigheten:</b> 20<br />
+                    <br />
+                    1 Ledig lägenhet i fastigheten<br />
+                    <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+                </p>
+                <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/MEbdAJ2D9Wq" target="_blank"> Hitta hit</a>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+
+                        <div class="col-lg-8">
+
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn btn-default" type="button" id="redigerabtn" onclick="showredigera()">
+                                    Redigera fastighet
+                                    <span class="caret"></span>
+                                </button>
+                            </div>
+
+
+                        </div>
+                        
+                        <div class="col-lg-2">
+
+                            <div class="btnredigera btn-group-xs" style="text-align:right;">
+                                <button class="btn btn-danger" type="button" id="redigerabtn">
+                                    Ta bort fastighet
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" row" style="background-color:#fbfbfb;">
+
+                        <div class="redigera" id="redigera" style="display:none; ">
+                            <br />
+                            <div class="col-md-4 col-lg-4">
+                                <div class="falt">
+                                    <label>
+                                        Område:
+                                    </label>
+                                    <div class="input-group">
+                                        <input name="state" placeholder="Örebro Norr" class="form-control" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="falt">
+                                    <label>Adress:</label>
+                                    <div class="input-group">
+                                        <input name="state" required placeholder="Erik RosenbergsVäg 1" class="form-control" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="falt">
+                                    <label>Antal lägenheter i fastigheten:</label>
+                                    <div class="input-group">
+                                        <input name="deltagareinput" placeholder="20" class="form-control input-md" type="text">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-12" style="padding-left:0px;">
+                                    <label>Typ av boende:</label><br />
+                                    <form>
+                                        <input type="radio" name="val" value="Student" checked> Student
+                                        <input type="radio" name="val" value="Senior"> Senior
+                                        <input type="radio" name="val" value="Övrigt"> Övrigt<br>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class=" col-md-6 col-lg-6" style="padding-right:0px;">
+                                <label>Bild:</label>
+                                <div class="row falt">
+
+                                    <div class="col-md-7">
+
+                                        <input name="state" placeholder="~/Content/Images/Blaslampan%202%20-%203.jpg" class="form-control" style="border-radius:0px;" type="text">
+                                    </div>
+                                    <div class=" col-md-3 col-lg-3" style="padding-left:0px;">
+                                        <button type="submit" class="btn btn-default">Ladda upp <span class="glyphicon glyphicon-file"></span></button>
+                                    </div>
+                                </div>
+
+                                <div class="row falt">
+
+                                    <div class=" col-md-7 col-lg-7" style="padding-right:0px;">
+                                        <div class="falt">
+                                            <label>Länk till karta:</label>
+                                            <div class="input-group">
+                                                <input name="state" placeholder="https://goo.gl/maps/boNdvNsyb1R2" class="form-control" type="text">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class=" col-md-5 col-lg-5" style="padding-left:0px;">
+                                        <br />
+                                        <br />
+
+                                        <a href="https://goo.gl/maps/gvNVpwmYs5n" target="_blank"> Öppna google maps</a>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
+                                    <div class=" falt">
+                                        <label>Visa på startsidan:</label><br />
+                                        <form>
+                                            <input type="radio" name="val" value="Ja"> Ja
+                                            <input type="radio" name="val" value="Nej" checked> Nej<br />
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="col-md-10 col-lg-7" style="padding-left:0px;">
+                                    <div class=" falt">
+                                        <label>Publicera:</label><br />
+                                        <form>
+                                            <input type="radio" name="val" value="Ja" checked> Ja
+                                            <input type="radio" name="val" value="Nej"> Nej<br />
+
+                                        </form>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-md-4 col-lg-2" style=" margin-top: 10px; margin-bottom: 10px;">
+
+
+                                <div>
+                                    <br />
+
+                                    <button type="submit" class="btn btn-success" style="margin-top:170px;">Spara <span class="glyphicon glyphicon-floppy-saved"></span></button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
+        </div>
 
             <br />
             <hr size="2" color="black">
