redigera länkar student

--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -61,6 +61,25 @@
                 <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro" target="_blank">ÖoB</a> <br />
                 <a href="https://www.sj.se/" target="_blank">SJ</a>
             </h4>
+            <div class="btnredigera btn-group-xs">
+                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                    Redigera
+                    <span class="caret"></span>
+                </button>
+                <div class="redigera" id="redigera" style="display:none;">
+                    <div class="col-md-12">
+                        
+                        <div class="falt">
+                            <label>
+                                Text:
+                            </label>
+                            <img src="~/Content/Images/publish-wordpress-page.jpg" class="img-responsive" alt="Cinque Terre">
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
     </div>
