--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -62,11 +62,11 @@
                 <a href="https://www.sj.se/" target="_blank">SJ</a>
             </h4>
             <div class="btnredigera btn-group-xs">
-                <button class="btn" type="button" id="redigerabtn" onclick="showredigera()">
+                <button class="btn" type="button" id="redigerabtn" onclick="showredigeralitenbild()">
                     Redigera
                     <span class="caret"></span>
                 </button>
-                <div class="redigera" id="redigera" style="display:none;">
+                <div class="redigera" id="redigeralitenbild" style="display:none;">
                     <div class="col-md-12">
                         
                         <div class="falt">
