ändrade till visa i bildspel istället för visa på startsidan

--- a/design/design/Views/Home/studentboendeAdmin.cshtml
+++ b/design/design/Views/Home/studentboendeAdmin.cshtml
@@ -200,7 +200,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa i bildspel:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -350,7 +350,7 @@
 
                                 <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                     <div class=" falt">
-                                        <label>Visa på startsidan:</label><br />
+                                        <label>Visa i bildspel:</label><br />
                                         <form>
                                             <input type="radio" name="val" value="Ja"> Ja
                                             <input type="radio" name="val" value="Nej" checked> Nej<br />
@@ -503,7 +503,7 @@
 
                                     <div class="col-md-10 col-lg-7" style="padding-left:0px;">
                                         <div class=" falt">
-                                            <label>Visa på startsidan:</label><br />
+                                            <label>Visa i bildspel:</label><br />
                                             <form>
                                                 <input type="radio" name="val" value="Ja"> Ja
                                                 <input type="radio" name="val" value="Nej" checked> Nej<br />
